--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ html {
 body {
     height: 100%;
     margin: 0%;
-    background-image: url(./back.jpg);
+    background-image: url(./images/back.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -13,7 +13,7 @@ body {
     .left {
         width: 40%;
         display: inline-block;
-        background-image: url(./left.jpg);
+        background-image: url(./images/left.jpg);
     }
 
     .right {
