--- a/main.css
+++ b/main.css
@@ -8,63 +8,139 @@ body {
     background-image: url(./images/back.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
     .left {
-        width: 40%;
+
+        margin: 0%;
+        width: 300px;
         display: inline-block;
         background-image: url(./images/left.jpg);
+        margin-top: 240px;
+        float: left;
+        margin-left: 350px;
+        height: 410px;
+
+
+
     }
 
         .left > h1 {
-
+            margin: 0%;
+            margin-top: 50px;
+            margin-left: 50px;
+            color: white;
+            letter-spacing: 5px;
+            font-size: 34px;
         }
 
         footer {
-
+            margin: 0%;
+            margin-top: 280px;
+            float: left;
+            color: #FFEDFF;
+            font-size: 15px;
+            
+            
+            
         }
 
             footer > a {
+                margin: 0%;
+                float: left;
+                margin-left: 45px;
+                text-decoration: underline;
+                color: #FFEDFF;
+            }
 
+            .terms {
+                margin: 0%;
+                text-decoration: underline;
+                color: #FFEDFF;
             }
 
             footer > span {
-
+                float: left;
+                margin: 0%;
+                padding-right: 5px;
+                padding-left: 5px;
+                text-decoration: none;
+                /* margin-right: 30px; */
             }
 
 
 
     .right {
         display: inline-block;
-        width: 40%;
+        /* width: 40%; */
         background-color: white;
+        float: left;
+        margin-top: 220px;
+        width: 400px;
+        height: 450px;
+        
     }
 
-        .x {
-
+        .exit {
+            font-size: 30px;
+            float: right;
+            margin-right: 15px;
+            margin-top: 10px;
+            transform: rotate(90deg);
+            
         }
 
         form {
 
+            margin-top: 70px;
         }
 
             label {
-
+                margin-top: 20px;
+                display: block;
+                margin-left: 62px;
+                font-size: 10px;
+                color: #C4C4C4;
+                text-transform: uppercase;
             }
 
             input {
-
+                margin-top: 10px;
+                display: block;
+                margin-left: 60px;
+                border: none;
+                outline: none;
+                border-bottom: 1px solid #C4C4C4;
+                
             }
 
-            .start {
+            .bottom {
 
+                margin-top: 20px;
+            }
+            .start {
+                margin-top: 40px;
+                display: inline-block;
+                margin-left: 60px;
+                background-color: #054FD7;
+                padding: 10px;
+                padding-left: 50px;
+                padding-right: 50px;
+                border-radius: 20px;
+                color: white;
             }
 
             span {
-
+                display: inline-block;
+                padding-left: 15px;
+                /* margin-left: 20px; */
             }
 
             a {
-
+                display: inline-block;
+                color: #054FD7;
+                text-decoration: none;
+                
             }
 
