--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ html {
 body {
     height: 100%;
     margin: 0%;
-    background-image: url(./images/back.jpg);
+    background-image: url(../images/back.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -16,7 +16,7 @@ body {
         margin: 0%;
         width: 300px;
         display: inline-block;
-        background-image: url(./images/left.jpg);
+        background-image: url(../images/left.jpg);
         margin-top: 240px;
         float: left;
         margin-left: 350px;
@@ -91,50 +91,15 @@ body {
             
         }
 
-        form {
-
-            margin-top: 70px;
-        }
-
-            label {
-                margin-top: 20px;
-                display: block;
-                margin-left: 62px;
-                font-size: 10px;
-                color: #C4C4C4;
-                text-transform: uppercase;
-            }
-
-            input {
-                margin-top: 10px;
-                display: block;
-                margin-left: 60px;
-                border: none;
-                outline: none;
-                border-bottom: 1px solid #C4C4C4;
-                
-            }
-
             .bottom {
 
                 margin-top: 20px;
             }
-            .start {
-                margin-top: 40px;
-                display: inline-block;
-                margin-left: 60px;
-                background-color: #054FD7;
-                padding: 10px;
-                padding-left: 50px;
-                padding-right: 50px;
-                border-radius: 20px;
-                color: white;
-            }
-
+            
             span {
                 display: inline-block;
                 padding-left: 15px;
-                /* margin-left: 20px; */
+               
             }
 
             a {
