--- a/css/main.css
+++ b/css/main.css
@@ -1,111 +1,93 @@
-html {
-    height: 100%;
-}
 
 body {
-    height: 100%;
-    margin: 0%;
-    background-image: url(../images/back.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   background-color: aquamarine;
 }
 
-    .left {
+    .container {
 
-        margin: 0%;
-        width: 300px;
         display: inline-block;
-        background-image: url(../images/left.jpg);
-        margin-top: 240px;
-        float: left;
-        margin-left: 350px;
-        height: 410px;
-
-
-
-    }
-
-        .left > h1 {
-            margin: 0%;
-            margin-top: 50px;
-            margin-left: 40px;
-            color: white;
-            letter-spacing: 5px;
-            font-size: 34px;
-        }
-
-        footer {
-            margin: 0%;
-            margin-top: 280px;
-            float: left;
-            color: #FFEDFF;
-            font-size: 15px;
-            
-            
-            
-        }
-
-            footer > a {
-                margin: 0%;
-                float: left;
-                margin-left: 45px;
-                text-decoration: underline;
-                color: #FFEDFF;
-            }
-
-            .terms {
-                margin: 0%;
-                text-decoration: underline;
-                color: #FFEDFF;
-            }
-
-            footer > span {
-                float: left;
-                margin: 0%;
-                padding-right: 5px;
-                padding-left: 5px;
-                text-decoration: none;
-                /* margin-right: 30px; */
-            }
-
-
-
-    .right {
-        display: inline-block;
-        /* width: 40%; */
-        background-color: white;
-        float: left;
-        margin-top: 219px;
-        width: 400px;
-        height: 450px;
+        width: 800px;
+        margin-top: 100px;
+        margin-left: calc((100% - 800px) / 2);
+        /* background-color: whitesmoke; */
         
     }
 
-        .exit {
-            font-size: 30px;
-            float: right;
-            margin-right: 15px;
-            margin-top: 10px;
-            transform: rotate(90deg);
+        .left {
+            display: inline-block;
+            width: 40%;
+            float: left;
+            margin-top: 20px;
+            background-color: blue;
+            padding: 40px;
+            padding-bottom: 20px;
             
+
+
+
         }
 
-            .bottom {
-
-                margin-top: 20px;
-            }
-            
-            span {
-                display: inline-block;
-                padding-left: 15px;
+            .left > h1 {
                
+                width: 100%;
+                color: white;
             }
 
-            a {
+            footer {
+                
                 display: inline-block;
-                color: #054FD7;
-                text-decoration: none;
+            }
+
+                footer > a {
+                    color: white;
+                    width: 100%;
+
+                }
+
+                footer > span {
+                   color: white;
+                }
+
+
+
+        .right {
+           display: inline-block;
+           width: 60%;
+           float: left;
+           background-color: green;
+           padding: 60px;
+           /* width: calc(60% - 120px); */
+        }
+
+            .exit {
+                
                 
             }
+
+             .btn {
+                display: inline-block;
+                line-height: 20px;
+                padding: 10px;
+                font-size: 18px;
+                padding-right: 40px;
+                padding-left: 40px;
+                background-color: blue;
+                border-radius: 20px;
+                color: #ffffff;
+            }
+                
+               .form-row > span {
+                display: inline-block;
+                padding: 10px;
+                line-height: 25px;    
+                
+                }
+
+                .form-row > a {
+
+                    display: inline-block;
+                padding: 10px;
+                line-height: 25px; 
+                    
+                }
 
