--- a/css/button.css
+++ b/css/button.css
@@ -1,3 +1,19 @@
-.start {
-  
+.btn {
+    display: inline-block;
+    line-height: 20px;
+    padding: 10px;
+    font-size: 18px;
+    padding-right: 40px;
+    padding-left: 40px;
+    background-color: blue;
+    border-radius: 20px;
+    color: #ffffff;
+    box-shadow: 0 4px 4px #0008;
+
+    }
+    
+    .btn:hover {
+        box-shadow: 0 4px 8px #000a;
+        cursor: pointer;
+    }
 }
