--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,10 @@
 
 body {
    background-color: aquamarine;
+   background-color: black;
+   background-image: url(../images/back.jpg);
+   background-size: cover;
+   background-repeat: no-repeat;
 }
 
     .container {
@@ -17,19 +21,16 @@ body {
         .left {
             display: inline-block;
             width: 40%;
-            background-color: blue;
+            background-color: #0069BA;
+            background-image: url(../images/left.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
             padding: 40px;
             padding-bottom: 20px;
             position: absolute;
             top: 30px;
             bottom: 30px;
-
-        
         }
-
-
-
-
             .left > h1 {
                
                 width: 100%;
@@ -93,5 +94,9 @@ body {
                 padding: 10px;
                 line-height: 25px; 
                     
+                }
+
+                .form-row > a:hover {
+                    color: red;
                 }
 
