--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,30 @@
 
+
 body {
-   background-color: aquamarine;
-   background-color: black;
-   background-image: url(../images/back.jpg);
-   background-size: cover;
-   background-repeat: no-repeat;
+   background-color: #777;
+
 }
 
+    .background {
+        filter: blur(25px);
+        background-image: url(../images/left.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 100vh;
+    }
     .container {
 
         display: inline-block;
         width: 800px;
-        margin-top: 100px;
-        margin-left: calc((100% - 800px) / 2);
-        /* background-color: whitesmoke; */
-        position: relative;
+        top: 100px;
+        /* left: calc((100% - 800px) / 2);
+        top: calc((100vh - 460px) / 2); */
+        position: absolute;
+        /* centravimas absoluciai pvz bodyje */
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         
     }
 
@@ -25,6 +35,7 @@ body {
             background-image: url(../images/left.jpg);
             background-repeat: no-repeat;
             background-size: cover;
+            background-position: center;
             padding: 40px;
             padding-bottom: 20px;
             position: absolute;
