--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ body {
                
                 width: 100%;
                 color: white;
+                font-weight: normal;
             }
 
                 footer {
